--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.jpa.properties.hibernate.dialect = de.swe.d1.restsqlite.Config.SQLiteDialect
+spring.datasource.url=jdbc:sqlite:myDb.db
+spring.jpa.database-platform=de.swe.d1.restsqlite.Config.SQLiteDialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
